# agent-knowledge-control-plane

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_control_plane/: __init__.py  api.py  knowledge.py  models.py  pipeline.py  state.py  store.py
agent_control_plane/static/: app.js  index.html  styles.css
examples/demo_vault/: decision-public-fixtures.md  project-overview.md  skill-citation-check.md
scripts/: demo_run.py  enable_lan_demo.ps1
tests/: test_api.py  test_knowledge.py  test_pipeline.py  test_state_machine.py
