[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-knowledge-control-plane"
version = "0.1.0"
description = "Evidence-first agent knowledge, governance and run-trace demonstrator."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1.0",
    "coverage>=7,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["agent_control_plane"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
